<resources>
    <string name="app_name">nineninechatapp</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="discovery">Discovery</string>
    <string name="account">Account</string>
    <string name="video">video</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="what_on_your_mine">What is on your minds?</string>
    <string name="profile">Profile</string>
    <string name="sample_phone_number"> 09 ***</string>
    <string name="sign">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="get_otp">Get Otp</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="have_an_account">Have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="check_internet">Please Check Internet</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="no_one_know_your_privacy">No one know your privacy</string>
    <string name="the_choice_for_smart_and_safety">The choice for smart and safety</string>
    <string name="next">Next</string>
    <string name="boundless_chat">BoundLess Chat</string>
    <string name="connecting_people_bridging_worlds">Connecting People, Bridging Worlds</string>
    <string name="unbelievable_ux">Unbelievable  UX</string>
    <string name="the_world_is_your_neighbourhood_now">The world is your neighbourhood now</string>
    <string name="message">Message...</string>

    <string name="search_result">Search results</string>
    <string name="resend_otp">Resend OTP code</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>

    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="set_image">Set image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gps_str">GPS is not enabled.Go to settings</string>
    <string name="sample_status">Design beautiful and modern Android apps that meet your user where they are, whether browsing their phone, reading on their tablet, glancing at their wrist, or watching TV.</string>
    <string name="likes">. Likes</string>
    <string name="comments">. Comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_equal">Not Equal</string>
    <string name="six_number">At least 6 digits number</string>
    <string name="sent_otp">We sent OTP to : </string>
    <string name="add_friend">Add Friend</string>
    <string name="you">You</string>
    <string name="request_friend">Request Friends</string>
    <string name="already_add">Already Addded</string>
    <string name="accept">Accept</string>
    <string name="empty_data">No Data</string>
    <string name="new_post"> Post</string>
    <string name="what_is_on_you_mind">What\'s on you mind?</string>
    <string name="create_post">Create Post</string>
    <string name="friend">Friends</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact</string>
    <string name="file">File</string>
    <string name="select_music">Select Music</string>
    <string name="video_filter_effect_normal">normal</string>
    <string name="video_filter_effect_cool">cold</string>
    <string name="video_filter_effect_warm">warm</string>
    <string name="video_filter_effect_gray">gray</string>
    <string name="video_filter_effect_cameo">cameo</string>
    <string name="video_filter_effect_invert">invert</string>
    <string name="video_filter_effect_sepia">sepia</string>
    <string name="video_filter_effect_toon">toon</string>
    <string name="video_filter_effect_convolution">convolution</string>
    <string name="video_filter_effect_sobel">sobel</string>
    <string name="video_filter_effect_sketch">sketch</string>

</resources>