<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="always"
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        app:showAsAction="always"
        android:icon="@drawable/search"
        android:title="@string/search" />


    <item
        android:id="@+id/video"
        app:showAsAction="always"
        android:icon="@drawable/res"
        android:title="" />


    <item
        app:showAsAction="always"
        android:id="@+id/discovery"
        android:icon="@drawable/dis"
        android:title="@string/discovery" />
    <item
        app:showAsAction="always"
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:title="@string/account" />

</menu>
