<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/img_launcher"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_above="@id/linear_container"
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_launcher" />


    <LinearLayout
        android:layout_above="@id/layout"
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_bg"
            android:orientation="horizontal"
            android:padding="2dp">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                app:ccp_hideNameCode="true"
                app:ccp_hidePhoneCode="false"
                app:ccp_keyboardAutoPopOnSearch="false"
                app:ccp_showFullName="false" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="no"
                android:background="@color/grey_two"
                android:hint="@string/sample_phone_number"
                android:inputType="number"
                android:padding="13dp"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/custom_cursor" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:autofillHints="no"
                android:background="@drawable/edittext_rounded_bg"
                android:hint="******"
                android:inputType="textPassword"
                android:padding="13dp"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/custom_cursor" />

            <ImageView
                android:id="@+id/btn_showImageHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/app_name"
                android:paddingEnd="20dp"
                android:src="@drawable/visibility_off" />

        </FrameLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_bg"
            android:text="@string/sign"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_SingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/txt_new"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <include layout="@layout/content_loading"/>

</RelativeLayout>