<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_gravity="center"
            android:src="@color/black"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name"
            android:background="@drawable/edittext_rounded_bg"
            android:layout_gravity="center"
            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="13dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/phone_number"
            android:background="@drawable/edittext_rounded_bg"
            android:layout_gravity="center"
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="13dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_rounded_bg"
            android:layout_gravity="center"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="13dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/sex"
            android:background="@drawable/edittext_rounded_bg"
            android:layout_gravity="center"
            android:id="@+id/edt_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="13dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:id="@+id/btn_getOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_bg"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>