<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_view"
            android:layout_marginTop="40dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/register_view_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_view" />

        <LinearLayout
            android:id="@+id/linear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_centerInParent="true"
                android:background="@drawable/edittext_rounded_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:layout_marginLeft="5dp"
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:ccp_hideNameCode="true"
                    app:ccp_hidePhoneCode="false"
                    app:ccp_keyboardAutoPopOnSearch="false"
                    app:ccp_showFullName="false" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:paddingStart="20dp"
                    android:textColor="@color/black"
                    android:background="@color/grey_two"
                    android:hint="@string/sample_phone_number"
                    android:inputType="number"
                    android:padding="13dp"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@drawable/custom_cursor" />

            </LinearLayout>

            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_getOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button_bg"
                android:text="@string/get_otp"
                android:textAllCaps="false" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_container">

            <TextView
                android:id="@+id/txt_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/have_an_account" />

            <TextView
                android:id="@+id/txt_SignIn"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txt_new"
                android:text="@string/sign_in" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/primary_color"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_back"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

</RelativeLayout>